DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
[1.0 Beta 3 released - 6.7.2005]===============================================
Jun-07-2005 patrickh    NEW VERSION: 0.93.0
Apr-08-2005 patrickh    Fixed a bug in the IntersenseAPI analog/digital unit
                        sequencing that resulted in configuration complications
                        and wasted sample buffers.
Mar-07-2005 patrickh    Renamed gadget::Proxy::isStupified() to
                        gadget::Proxy::isStupefied() and
                        gadget::Proxy::stupify() to gadget::Proxy::stupefy().
                        NEW VERSION: 0.92.1

[1.0 Beta 2 released - 1.18.2005]==============================================
Jan-18-2005 patrickh    NEW VERSION: 0.92.0

[1.0 Beta 1 released - 12.24.2004]=============================================
Dec-23-2004 patrickh    NEW VERSION: 0.91.0
Dec-21-2004 aronb       Refactored event input to allow more code reuse and
                        flexibility. As an effect EventWindow and
                        EventWindowProxy were renamed to KeyboardMouse and
                        KeyboardMouseProxy respectively.
                        NEW VERSION 0.22.0
Dec-01-2004 patrickh    Renamed the config element type loaded by
                        gadget::AbstractNetworkManager from machine_specific to
                        cluster_node.
                        NEW VERSION 0.21.0
Nov-13-2004 patrickh    Renamed gadget::SpeechRecogDigital* to gadget::Command*
                        and gadget::SpeechRecogString* to gadget::String*.
                        NEW VERSION 0.20.0
Nov-08-2004 dshipton    Split EventWindowXWin::openTheWindow() into
                        openLocalWindow and setupRemoteWindow and
                        added code to get size into getWindowWidthAndHeight().
Oct-18-2004 allenb      Major refactoring of EventWindow handling on X.