@@ -1,3 +1,4 @@
+0.93.1-0 @06/15/2005 14:40:00 UTC@
 0.93.0-0 @06/07/2005 02:40:00 UTC@
 0.92.1-0 @03/07/2005 22:30:00 UTC@
 0.92.0-0 @01/18/2005 16:05:00 UTC@
