@@ -21,7 +21,7 @@
 
 #include "isense.h"
 
-#ifdef VPR_OS_Win32
+#ifdef VPR_OS_Windows
 #include <windows.h>
 #include <winbase.h>
 #endif
