@@ -843,7 +843,7 @@ bool InputManager::configureInputManager(jccl::ConfigElementPtr element)
       int dir_count = element->getNum(dir_prop_name);
       std::string driver_dir;
 
-#if defined(VPR_OS_Win32)
+#if defined(VPR_OS_Windows)
       const std::string driver_ext("dll");
 #elif defined(VPR_OS_Darwin)
       const std::string driver_ext("dylib");
